--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #282c34;
   color: white;
+  background-image: url('https://lumiere-a.akamaihd.net/v1/images/star-wars-backgrounds-38_d0dbbfb4.jpeg');
+  background-size: cover;
+  height: 100vh;
 }
+
+@import url('https://fonts.cdnfonts.com/css/star-wars');
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -17,13 +22,57 @@ code {
 header > h1 {
   background-color: white;
   color: #282c34;
-  height: 80px;
+  height: 70px;
   margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Star Wars", sans-serif;
 }
 
 a {
   color: #61dafb;
+  text-decoration: none;
+  font-family: "Star Wars", sans-serif;
+}
+
+button {
+  border: none;
+  font-family: "Star Wars", sans-serif;
+  background-color: rgb(0, 0, 0, 0.5);
+  color: #61dafb;
+  padding: 24px 16px 16px 16px;
+  margin-top: 32px;
+  font-size: 18px;
+
+}
+
+.starship-list{
+  display: flex;
+  flex-flow: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.starship-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 120px;
+  width: 180px;
+  background-color: rgba(7, 7, 7, 0.6);
+  margin: 16px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.starship-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#gif {
+  width: 750px;
 }
