adjust styling and link/buttons

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ header > h1 {
   justify-content: center;
   align-items: center;
   font-family: "Star Wars", sans-serif;
+  font-size: 42px;
 }
 
 a {
@@ -54,16 +55,27 @@ button {
   align-items: center;
 }
 
+.starship-gif{
+  display: flex;
+  flex-flow: wrap;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  width: cover;
+  height: cover;
+}
+
 .starship-card {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 120px;
-  width: 180px;
+  height: 100px;
+  width: 160px;
   background-color: rgba(7, 7, 7, 0.6);
   margin: 16px;
   text-align: center;
   font-size: 20px;
+  padding: 10px;
 }
 
 .starship-info {
@@ -74,5 +86,5 @@ button {
 }
 
 #gif {
-  width: 750px;
+  width: 650px;
 }
