--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,18 @@ code {
     monospace;
 }
 
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+  background-size: cover;
+}
+
+h2 {
+  margin: 8px 0;
+}
+
 header > h1 {
   background-color: white;
   color: #282c34;
@@ -43,7 +55,7 @@ button {
   background-color: rgb(0, 0, 0, 0.5);
   color: #61dafb;
   padding: 24px 16px 16px 16px;
-  margin-top: 32px;
+  margin: 16px 0;
   font-size: 18px;
 
 }
@@ -61,8 +73,8 @@ button {
   justify-content: center;
   align-items: center;
   background-color: black;
-  width: cover;
-  height: cover;
+  width: 100vw;
+  height: 95vh;
 }
 
 .starship-card {
@@ -83,8 +95,18 @@ button {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-image: url('../public/giphy.GIF');
+  height: 480px;
+  width: 480px;
+  border: inset;
+  text-align: center;
 }
 
 #gif {
   width: 650px;
+}
+
+#lightspeed {
+  border: outset;
+  width: 120vh;
 }
