--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,11 @@ button {
   width: 480px;
   border: inset;
   text-align: center;
+  border-radius: 50%;
+}
+
+.starship-info h1 {
+  width: 420px;
 }
 
 #gif {
