--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ h2 {
 header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   background-color: white;
   margin-top: 24px;
 }
@@ -49,13 +49,25 @@ header > h1 {
   justify-content: center;
   align-items: center;
   font-family: "Star Wars", sans-serif;
-  font-size: 42px;
+  font-size: 48px;
 }
 
 a {
   color: #61dafb;
   text-decoration: none;
   font-family: "Star Wars", sans-serif;
+}
+
+header a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+header p {
+  margin: 10px 0;
+  font-size: 18px;;
 }
 
 button {
@@ -121,7 +133,7 @@ button {
 }
 
 #mf-icon {
-  height: 60px;
+  height: 70px;
 }
 
 #r2-icon {
