--- a/src/index.css
+++ b/src/index.css
@@ -154,3 +154,9 @@ button {
     margin-top: 150px;
   }
 }
+
+@media only screen and (max-width: 400px) {
+  .starship-list {
+    margin-top: 250px;
+  }
+}
