--- a/src/index.css
+++ b/src/index.css
@@ -156,7 +156,7 @@ button {
 }
 
 @media only screen and (max-width: 400px) {
-  .starship-list {
-    margin-top: 250px;
+  main {
+    margin-top: 400px;
   }
 }
