--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,7 @@ header > h1 {
   align-items: center;
   font-family: "Star Wars", sans-serif;
   font-size: 48px;
+  text-align: center;
 }
 
 a {
@@ -151,13 +152,22 @@ button {
 
 @media only screen and (max-width: 750px) {
   .starship-list {
-    margin-top: 180px;
+    margin-top: 40px;
   }
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 450px) {
   main {
-    margin-top: 380px;
+    display: flex;
+    flex-direction: column;
+    /* align-items: start; */
+    justify-content: start;
+  }
+  .starship-list {
+    margin-top: 0;
+  }
+  header {
+    justify-content: space-between;
   }
   header p {
     font-size: 14px;
@@ -171,5 +181,8 @@ button {
   }
   header h1 {
     font-size: 42px;
+  }
+  .starship-info {
+    margin-top: 16px;
   }
 }
